<resources>
    <string name="app_name">Here I Am</string>
    <string name="label_home">Startseite</string>
    <string name="label_entry">Beitrag</string>
    <string name="label_profile">Profil</string>
    <string name="label_your_location">Dein ausgewählter Standort</string>
    <string name="text_your_location">gewünschter Standort</string>
    <string name="desc_edit_your_location">Standort editieren</string>
    <string name="desc_placeholder">Platzhalter</string>
    <string name="heading_placeholder">Beitragstitel</string>
    <string name="text_last_entries">Letzte Beiträge</string>
    <string name="label_email">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="label_sign_in">Anmelden</string>
    <string name="hint_heading_entry">Beitragstitel</string>
    <string name="heading_new_entry">Neuen Beitrag erfassen</string>
    <string name="hint_text_entry">Beitrag</string>
    <string name="heading_login">Login</string>
    <string name="label_save_entry">Beitrag erstellen</string>
    <string name="hint_your_entry">Dein Beitrag</string>
    <string name="desc_profile_avatar">Profilbild</string>
    <string name="label_profile_save">Änderungen speichern</string>
    <string name="heading_your_profile">Dein Profil</string>
    <string name="label_comment_entry">Kommentieren</string>
    <string name="label_all_entries">Alle Einträge</string>
    <string name="firestore_collection_path">entriesV2</string>
    <string name="heading_all_entries">Alle Einträge</string>
    <string name="hereiam_logo">HereIAm Logo</string>
    <string name="welcome_teaser">Herzlich willkommen in unserer HereIam App!</string>
    <string name="welcome_intro_1">Unsere App bringt dir die Möglichkeit mehr über Standorte zu erfahren.</string>
    <string name="welcome_intro_2">Du kannst Beiträge auch selber zu deinem oder zu einem gewünschten Standort erfassen und dazu kannst auch passende Fotos hochladen.</string>
    <string name="welcome_start_btn">Los geht es!</string>
    <string name="login_registration">Noch kein Konto?</string>
    <string name="login_registration_link">Registriere dich hier.</string>
    <string name="login_forgot_password">Passwort vergessen?</string>
    <string name="heading_reset_password">Passwort vergessen?</string>
    <string name="reset_passwort_explanation">Fülle deine E-Mail-Adresse aus, um dein Passwort zurückzusetzen.</string>
    <string name="btn_reset_password">Passwort zurücksetzen</string>
    <string name="heading_new_user">Neuen Benutzer erstellen</string>
    <string name="btn_create_new_user">Benutzer erstellen</string>
    <string name="text_already_user">Bereits ein Konto?</string>
    <string name="text_back_to_login">Melde dich hier an.</string>
    <string name="error_mandatory">Pflichtfeld</string>
    <string name="error_invalid_email">Bitte gib eine gültige Adresse ein!</string>
    <string name="error_min_char_count">mindestens 6 Zeichen</string>
    <string name="btn_add_image">Bild hochladen</string>
    <string name="logout">Abmelden</string>
    <string name="logout_question">Bist du dir sicher?</string>
    <string name="logout_yes">Ja</string>
    <string name="logout_abort">Abbrechen</string>
    <string name="input_your_name">Dein Name</string>
    <string name="mail_placeholder">meine@email.com</string>
    <string name="message_profile_changed">Dein Profil wurde angepasst</string>
    <string name="link_reset_password">Setze dein Passwort zurück (TODO)</string>
    <string name="image_to_entry">Bild zum Beitrag</string>
    <string name="action_settings">Settings</string>
    <string name="permission_status_granted">Zugriff Standort ist gewährt</string>
    <string name="permission_status_denied">Zugriff Standort is nicht gewährt</string>
    <string name="permission_status_blocked">Zugriff Standort ist blockiert</string>
    <string name="permission_status_denied_show_notif">"Zugriff Standort is nicht gewährt."</string>
    <string name="gps_status_enabled">"GPS ist aktiviert"</string>
    <string name="gps_status_disabled">"GPS is deaktiviert"</string>
    <string name="notif_in_progress">Am laden…</string>
    <string name="gps_required_title">GPS erforderlich</string>
    <string name="permission_required_title">Zugriff auf Standort erforderlich</string>
    <string name="gps_required_body">GPS muss aktiviert werden, sonst kann der Standort nicht angezeigt werden</string>
    <string name="notif_location_tracking_title">Standort Tracking</string>
    <string name="permission_required_body">Bitte bestätigen sonst wird das Standort-Tracking nicht funktionieren</string>
    <string name="permission_blocked_body">Zugriff Standort nicht noch einmal nachfragen, wurde aktiviert! Bitte in Einstellungen angaben.</string>
    <string name="notif_gps_waiting_body">Warte für GPS für Aktivierung…</string>
    <string name="simulate_notifications">Simuliere Nachrichten</string>
    <string name="click_to_retry"> (klicke zum wiederholen)</string>
    <string name="delete">Beitrag löschen</string>
    <string name="chosenLocation">gewählter Standort</string>
    <string name="new_entry">neuer Beitrag</string>
    <string name="your_location">momentaner Standort</string>
    <string name="entry_successfully_saved">Beitrag wurde erfolgreich hinzugefügt!</string>
    <string name="registration_successfully">Registration erfolgreich!</string>
    <string name="please_login_first">Bitte melde dich zuerst an.</string>
    <string name="profile_picture_successfully_saved">Profilbild wurde erfolgreich gespeichert.</string>
    <string name="reset_password_successfully">In den nächsten Minuten erhältst du eine E-Mail, um dein Passwort zurücksetzen zu können.</string>
    <string name="login_successfully">Du hast dich erfolgreich angemeldet.</string>
    <string name="missing_connection_body_text">HereIAm funktioniert nur mit aktiver Internetverbindung. Bitte schalte das Internet ein und klicke auf «OK».</string>
    <string name="missing_connection_title">Fehlende Netzwerkverbindung</string>
    <string name="ok">OK</string>
    <string name="username_successfully_saved">Username gespeichert!</string>
    <string name="please_activate_access_on_location">Bitte Zugriff auf Standort aktivieren!</string>
    <string name="couldnt_get_location">Leider konnten wir deinen Standort nicht ausfindig machen.</string>
    <string name="reset_location">Standort zurücksetzen</string>
    <string name="error_location_not_found">Standort nicht gefunden.</string>
    <string name="error_reason">Grund:</string>
    <string name="error_while_loading_recent_entries">Fehler beim Laden der letzten Beiträge.</string>
    <string name="error_generic_msg">Leider ist ein Fehler aufgetreten.</string>
    <string name="error_while_saving_entry">Leider konnte der Eintrag nicht gespeichert werden.</string>
    <string name="error_while_register_user">Leider konnte die Registrierung nicht abgeschlossen werden.</string>
    <string name="error_while_logging_in">Leider hat die Anmeldung fehlgeschlagen.</string>
    <string name="error_while_uploading_image">Das Bild konnte nicht gespeichert werden.</string>
    <string name="error_while_loading_image">Leider konnte das Bild nicht geladen werden.</string>
    <string name="error_missing_location">Standort konnte nicht gefunden werden.</string>
</resources>
