<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/gap_default"
        tools:context=".screens.entry.form.EntryFormFragment">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/heading_new_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/gap_large"
            android:layout_marginTop="@dimen/gap_default"
            android:text="@string/heading_new_entry"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressbar" />
        <TextView
            android:id="@+id/location_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/gap_large"
            android:layout_marginTop="@dimen/gap_default"
            android:text="@string/chosenLocation"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading_new_entry" />

        <Button
            android:id="@+id/btn_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/gap_large"
            android:layout_marginTop="@dimen/gap_large"
            android:text="@string/btn_add_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_entry" />

        <EditText
            android:id="@+id/input_heading_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/gap_large"
            android:layout_marginTop="@dimen/gap_default"
            android:autofillHints="@string/hint_heading_entry"
            android:hint="@string/hint_heading_entry"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_photo"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/input_text_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/gap_large"
            android:layout_marginTop="@dimen/gap_default"
            android:autofillHints="@string/hint_text_entry"
            android:hint="@string/hint_your_entry"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_heading_entry"
            tools:ignore="LabelFor" />

        <ImageView
            android:id="@+id/entry_photo"
            android:layout_width="224dp"
            android:layout_height="160dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:contentDescription="@string/image_to_entry"
            android:src="@drawable/ic_image_grey_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_text_entry" />

        <Button
            android:id="@+id/btn_add_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/gap_large"
            android:layout_marginTop="@dimen/gap_default"
            android:text="@string/label_save_entry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_photo"
            app:layout_constraintVertical_bias="0.2" />
        <Button
            android:id="@+id/btn_new_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/gap_large"
            android:layout_marginTop="@dimen/gap_default"
            android:text="@string/new_entry"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_entry" />
        <Button
            android:id="@+id/btn_delete_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/gap_large"
            android:layout_marginTop="@dimen/gap_default"
            android:text="@string/delete"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_new_entry" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>